@@ -49,6 +49,7 @@ Fixes:
    * Fix elm_transit image animation that last few frames are skipped.
    * FIx elm_transit to accept proxy object.
    * Fix glview crash even if the object is failed allocating.
+   * Fix the elm_flip to accept proxy object.
 
 Removals:
 
